*Empty MediaWiki Message*

--- a/Photoshop.mw
+++ b/Photoshop.mw
@@ -38,7 +38,7 @@ Photoshop yesɛa amasal n ufaylu n yiman-is (Asiɣzef: psd) ayen i ɣ-yettaǧǧa
 ! Tiɣeṛɣeṛt
 ! isem n telgalt
 ! Azmez n uzenzi
-! aveddel agejday
+! abeddel agejday
 |-
 | 1.0
 | Mac OS
@@ -61,7 +61,7 @@ Photoshop yesɛa amasal n ufaylu n yiman-is (Asiɣzef: psd) ayen i ɣ-yettaǧǧa
 | rowspan=2 | 2.5
 | Mac OS
 | ''Merlin (photoshop)''
-| rowspan=2 | novembre 1992
+| rowspan=2 | wamber 1992
 | rowspan=2 |
 |-
 | Windows
@@ -140,13 +140,13 @@ Photoshop yesɛa amasal n ufaylu n yiman-is (Asiɣzef: psd) ayen i ɣ-yettaǧǧa
 | CS (8.0)
 | Mac OS, Windows
 | ''Dark Matter''
-| tuver 2003
+| tuber 2003
 | Caméra RAW 2.x, outil densité, {{lang|en|''Match Colour command''}}, filtre « flou d’objectif », histogramme en temps réel, détection et refus d’imprimer les images scannées issues de différents billets de banque
 |-
 | CS2 (9.0)
 | Mac OS, Windows
 | ''Space Monkey''
-| yevrir 2005
+| yebrir 2005
 | Caméra RAW 3.x, {{lang|en|''Smart Objects''}}, {{lang|en|''Image Warp''}}, outil correcteur, réduction d’yeux rouges, filtre de correction d’objectifs, {{lang|en|''Smart Sharpen''}}, {{lang|en|''Vanishing Point''}}, support du [[Imagerie à grande gamme dynamique|HDRI]]
 |-
 | CS3 (10.0)
@@ -167,7 +167,7 @@ Photoshop yesɛa amasal n ufaylu n yiman-is (Asiɣzef: psd) ayen i ɣ-yettaǧǧa
 | CS4 (11.0)
 | Mac OS, Windows
 | ''Stonehenge''
-| tagara tuver 2008
+| taggara n tuber 2008
 | 
 * Fonctions de peinture et de compositing 3D
 * Panneau de réglage pour l'image
@@ -179,7 +179,7 @@ Photoshop yesɛa amasal n ufaylu n yiman-is (Asiɣzef: psd) ayen i ɣ-yettaǧǧa
 | CS5 (12.0)
 | Mac OS, Windows
 | ''White Rabbit''
-| 12 yevrir 2010
+| 12 yebrir 2010
 |
 * Content-Aware Fill: permet de supprimer simplement certains éléments d'une photo.
 * Amélioration de la sélection des zones floues (cheveux, poils, etc)
