--- a/Photoshop.mw
+++ b/Photoshop.mw
@@ -135,7 +135,7 @@ Photoshop yesɛa amasal n ufaylu n yiman-is (Asiɣzef: psd) ayen i ɣ-yettaǧǧa
 | CS3 (10.0)
 | Mac OS, Windows
 | ''Red Pill''
-| tagara meɣṛes 2007
+| taagara n meɣṛes 2007
 |-
 | CS4 (11.0)
 | Mac OS, Windows
