*Empty MediaWiki Message*

--- a/Saskačewan.mw
+++ b/Saskačewan.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Saskačewan''' d yiwet tamnaṭ deg utaram n tmurt n [[Kanada]], di walmaten. 
 
 Tajumma-nes d 651 900 km² u ɣur-es  1 010 146 imezdaɣ deg 1 yebrir n 2008, tigti seg At Saskačewan zedɣen deg wenẓul n temnaṭ. 
