Asemmimeḍ ar [[Saskatchewan]]

--- a/Saskačewan.mw
+++ b/Saskačewan.mw
@@ -1,9 +1,1 @@
-{{Databox}}
-'''Saskačewan''' d yiwet tamnaṭ deg utaram n tmurt n [[Kanada]], di walmaten. 
-
-Tajumma-nes d 651 900 km² u ɣur-es  1 010 146 imezdaɣ deg 1 yebrir n 2008, tigti seg At Saskačewan zedɣen deg wenẓul n temnaṭ. 
-D [[Regina]] (193 093 imezdaɣ) d tamdint tameqqrant seg akk temdinin n temnaṭ. Seg iɣerman nniḍen a nufi, [[Prince Albert]], [[Moose Jaw]], [[North Battleford]], [[Yorkton]] d [[Swift Current]]. 
-
-Saskačewan tella gar Akalen n ugafa-atraman af ugafa, [[Manituba]] af wegmuḍ, [[Alberta]] af utaram d iwunak imarikanen af wenẓul : [[Dakuta N Ugafa]] d [[Montana]]. Isen-is yusa-d seg [[Asif n Saskačewan|wasif n Saskačewan]], anamek-ines i d-yusi si tutlayt n Kri ([[Ikriyen]] i yellan weɣref amezwaru f wakal-nni) d "wasif arurad" (Kisiskačewan s [[Takrit|Tekrit]]). 
-
-[[Category:Kanada]][[Category:Tarakalt]]
+#REDIRECT [[Saskatchewan]]
