*Empty MediaWiki Message*

--- a/Lɛerbi_Benmhidi.mw
+++ b/Lɛerbi_Benmhidi.mw
@@ -1,6 +1,5 @@
-{{Infobox biography}}
-
-Iluled '''Lɛarbi U Mhidi''' ( yettwassen s yisem n  '''Lɛarbi Benmhidi)''' deg [[Tamlilt|Temlilt]] n useggas n [[1923]], yeɣra [[Leqran]] sakkin yekcem ɣer uɣerbaz n [[Fransa|ifransisen]] maca staxrentid sinna, imir nni yruḥ akw d baba-s ar [[Tibeskert|Tbeskert]] anda yeṭṭef taɣuri ines g uɣerbaz agla n [[Tiddukla n Imusnawen Inselmen Idzayriyen]]. 
+{{Databox}}
+Ilul-d '''Lɛarbi Benmhidi''' deg [[Tamlilt|Temlilt]] n useggas n [[1923]], yeɣra [[Leqran]] sakkin yekcem ɣer uɣerbaz n [[Fransa|ifransisen]] maca staxrentid sinna, imir nni yruḥ akw d baba-s ar [[Tibeskert|Tbeskert]] anda yeṭṭef taɣuri ines g uɣerbaz agla n [[Tiddukla n Imusnawen Inselmen Idzayriyen]]. 
 yekcem g ukabar n agdud adzayri, yella deg tameskant n [[08 magu 1945]], ihi ṭfent, arrant a lḥebs 10 isegwasen.
 Asmi yettwaṭṭef, ḥekmen fellas s lmut u nɣant bla ma iɛedda di ccreɛ, deg useggas n 1957.
 
