*Empty MediaWiki Message*

--- a/Lɛerbi_Benmhidi.mw
+++ b/Lɛerbi_Benmhidi.mw
@@ -1,7 +1,8 @@
 {{Databox}}
-Ilul-d '''Lɛarbi Benmhidi''' deg [[Tamlilt|Temlilt]] n useggas n [[1923]], yeɣra [[Leqran]] sakkin yekcem ɣer uɣerbaz n [[Fransa|ifransisen]] maca staxrentid sinna, imir nni yruḥ akw d baba-s ar [[Tibeskert|Tbeskert]] anda yeṭṭef taɣuri ines g uɣerbaz agla n [[Tiddukla n Imusnawen Inselmen Idzayriyen]]. 
-yekcem g ukabar n agdud adzayri, yella deg tameskant n [[08 magu 1945]], ihi ṭfent, arrant a lḥebs 10 isegwasen.
-Asmi yettwaṭṭef, ḥekmen fellas s lmut u nɣant bla ma iɛedda di ccreɛ, deg useggas n 1957.
+Ilul-d '''Lɛerbi Benmhidi''' deg [[Tamlilt|Temlilt]] n useggas n [[1923]], yeɣra [[Leqran]] sakkin yekcem ɣer uɣerbaz n [[Fransa|ifransisen]] maca staxren-t-id sinna, imir-nni iruḥ akked baba-s ar [[Tibeskert|Tbeskert]] anda yeṭṭef taɣuri ines deg uɣerbaz agla n [[Tiddukla n Imusnawen Inselmen Idzayriyen]]. 
+yekcem deg ukabar n weɣlef azzayri, yella deg tameskant n [[08 magu 1945]], ihi ṭṭfen-t, rran-t ar lḥebs 10 iseggasen.
+
+Asmi yettwaṭṭef, ḥekmen fell-as s lmut u nɣant bla ma iɛedda di ccreɛ, deg useggas n 1957.
 
 [[Taggayt:Tameddurt|Benmhidi]]
 [[Taggayt:Amezruy|Benmhidi]]
