*Empty MediaWiki Message*

--- a/Aɣlan.mw
+++ b/Aɣlan.mw
@@ -1,10 +1,6 @@
-[[File:Joseph Ernest Renan, by F. Mulnier.jpg|thumb|250px|Ernest Renan]]
-'''Ernest Renan:''' ''D acu d Aɣlan ?''
+Wa d tukkist seg usarag i d-yefka [[Ernest Renan]] ass n 11 meɣres 1882 deg tesdawit taparizyanit n La Sorbonne.
 
-
-Wa d tukkist seg usarag i d-yefka Ernest Renan ass n 11 meɣres 1882 deg tesdawit taparizyanit n La Sorbonne.
-
-« Aɣlan d iman, d tigejdit taruḥanit. Snat n tɣawsiwin, deg tidet, i d-ibennun iman-a, tigejdit-a taruḥanit.
+'''Aɣlan''' d iman, d tigejdit taruḥanit. Snat n tɣawsiwin, deg tidet, i d-ibennun iman-a, tigejdit-a taruḥanit.
 
 Yiwet attan deg zik, tayeḍ tezdeɣ tura. Yiwet tessezdi imdanen s waṭas n yismektiyen i yesɛan, tayeḍ d lebɣi n tura, d lḥir n tudert akken jmiɛ, d lebɣi n ukemmel n werfad s igenni ayen i ɣ-d-ǧǧan imezwura yessezdi-aɣ. Amdan, ay imdanen, ur d-yesnulfu ara. Aɣlan am wemdan, d leqrar n waṭas n leqrun n leɛtab,n yiseflan, n tayri. Taẓẓalit i yimezwura d azref ur nezmir ad t-yekkes yiwen; d lejdud i ɣ-d-ifeṣṣlen akken nella akka tura. Amezruy, irgazen, iseɣ is-s ara nzuxx, d wi i d sɛaya n yemdanen akken ad snernin tikti n weɣlan-nsen. Amezruy i ɣ-yessizwiɣen udmawen-nneɣ i ɣ-yezdin seg zik, lebɣi i ɣ-icerken akka tura, asbeddi n temsal timeqranin s tiwizi, lebɣi n ukemmel seg webrid-a, atan d acu ilaqen i waken ad nili d aɣref. Nettzuxxu s leɛtab i neɛteb, s ideddicen i ɣ-iqerḥen. Nḥemmel axxam i d-nebna, win ara-d-neǧǧ i yineggura. Ccna n Sparte: “Aql-aɣ d ayen tellim, ad nili d ayen tellam”, ɣas akken d afessas, d netta i d imseɣret n yal tamurt.
 
