*Empty MediaWiki Message*

--- a/Tutlayt_taqbaylit.mw
+++ b/Tutlayt_taqbaylit.mw
@@ -20,7 +20,7 @@
 | notice = IPA
 }}
 
-'''Taqbaylit''' (s [[tifinaɣ]]: '''ⵜⴰⵇⵠⴰⵢⵍⵉⵜ''') d [[tutlayt]] i ttmeslayen [[Leqbayel|Iqbayliyen]] deg [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]] d [[Lezzayer]] d tamɣiwent Taqbaylit yettidiren deg [[Turuft|Uruppa]] ([[Fransa]], [[Spanya]], [[Lalman]]...) yakk d [[Tamrikt|Temrikt]] ([[Kanada]], iwunak idduklen N Marikan ...). Taqbaylit tettikki deg twacult n [[Tamaziɣt|tutlayin Timaziɣin]]. Ma ɣas tutlayt [[tamaziɣt]] zik tettwaru s [[Asekkil|isekkilen]] n [[Tifinaɣ]] akken tettwaru [[Tutlayt tamaceɣt|tmaceɣt]] ar ass-a, [[Tutlayin timaziɣin|Tamaziɣt]] n tmurt n Leqbayel neɣ Taqbaylit tettwaru s [[Talatint|isekkilen ilatiniyen]]. 
+'''Taqbaylit''' d [[tutlayt]] i ttmeslayen [[Leqbayel|Iqbayliyen]] deg [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]] d [[Lezzayer]] d tamɣiwent Taqbaylit yettidiren deg [[Turuft|Uruppa]] ([[Fransa]], [[Spanya]], [[Lalman]]...) yakk d [[Tamrikt|Temrikt]] ([[Kanada]], iwunak idduklen N Marikan ...). Taqbaylit tettikki deg twacult n [[Tamaziɣt|tutlayin Timaziɣin]]. Ma ɣas tutlayt [[tamaziɣt]] zik tettwaru s [[Asekkil|isekkilen]] n [[Tifinaɣ]] akken tettwaru [[Tutlayt tamaceɣt|tmaceɣt]] ar ass-a, [[Tutlayin timaziɣin|Tamaziɣt]] n tmurt n Leqbayel neɣ Taqbaylit tettwaru s [[Talatint|isekkilen ilatiniyen]]. 
 
 Adlis amenzu id yeffɣen s Teqbaylit d win yura [[Adolphe Hanoteau]] ɣef tuɣac n [[Ǧerǧer|Ǧerğer]] deg useggas n 1867,  deffir-s d [[Auguste Mouliéras]]  yuran sin n [[adlis|yidlisen]] ɣef [[tamacahut|tmucuha]] n Tmurt n Iqbayeliyen gar N [[aseggas|iseggasen]] n 1891, 1893 d 1895), akk d [[Ɛmer u Saɛid Bulifa|Bulifa]] i yuran adlis ɣef yisefra n [[Si Muḥend u Mḥend|Si Muḥend]] deg useggas n 1904. Imaren, uran [[Ifransiwen]] kra n yidlisen ɣef tmucuha d yisefra n Yiqbayliyen. [[Ungal]] amenzu ittwarun s Teqbaylit d win yura [[Belɛid At Ɛli]] deg yiseggasen 1940. Adlis i s-yefkan ilugan iressan n tjerrumt i Teqbaylit d win yura Dda [[Mulud Mɛemmri|Mulud n At Mɛemmeṛ]]. [[Kamal U Zerrad]] netta yerna-d ɣef umahil n Dda Lmulud i wakken ad d-iressi ugar ilugan n tjerrumt n tutlayt-ayi. 
 Iseggasen-a ineggura ffɣen-d azal n 400 idlisen s Tmaziɣt, gar ammuden n isefra, tullisin akk d ungalen. 
