*Empty MediaWiki Message*

--- a/Ernest_Renan.mw
+++ b/Ernest_Renan.mw
@@ -1,2 +1,2 @@
 {{Databox}}
-'''Joseph Ernest Renan''' ([[tarumit]]: [ʁənɑ̃]; 28 furar 1823 – 2 tuber 1892) d amussnaw mechur seg tmurt n [[fransa]]. Yella d amussnaw n [[tutlayin tisamyin]], d afilulug, d afiluzuf.
+'''Joseph Ernest Renan''' ([[tarumit]]: [ʁənɑ̃]; 28 furar 1823 – 2 tuber 1892) d amussnaw mechur seg tmurt n [[fransa]]. Yella d amussnaw n [[tutlayin tisamiyin]], d afilulug, d afiluzuf.
