*Empty MediaWiki Message*

--- a/Imeru.mw
+++ b/Imeru.mw
@@ -1,3 +1,4 @@
+{{Delete|invented word}}
 {{Databox}}
 '''Imeru''' neɣ '''Amraw''' (Asget: '''imrawen''') d [[afgan]] amezwaru sgi id ittekk ufgan yellan d mmis neɣ d mmis n miss neɣ tarwa ara ad yasen seld-nsen.
 
