*Empty MediaWiki Message*

--- a/Asmeskel_anezway.mw
+++ b/Asmeskel_anezway.mw
@@ -1,4 +1,9 @@
-'''Asmeskel anezway''' d timerniwt n [[taẓɣelt|teẓɣelt]] tajummant tamnummsant n umadal yakk d timerniwt n tsekta n [[Asneksid n ukaṛbun|usneksid n ukaṛbun]] d [[Amitan|imitan]] d kra n igazen n iden deg tegnawt, igazen-a ttusemman s [[igazen imessiẓenen]] acku ttekkayen-t deg ussiẓen (asezɣel) n tegnawt n [[tagnit|tegnit]] 
+'''Asmeskel anezway''' d timerniwt n [[taẓɣelt|teẓɣelt]] tajummant tamnummsant n umadal yakk d timerniwt n tsekta n [[Asneksid n ukaṛbun|usneksid n ukaṛbun]] d [[Amitan|imitan]] d kra n igazen n iden deg tegnawt, igazen-a ttusemman s [[igazen imessiẓenen]] acku ttekkayen-t deg ussiẓen (asezɣel) n tegnawt n [[tagnit|tegnit]], Dɣa tamerniwt deg wammas n teẓɣelt tettwaẓra deg tlemmast n [[tasut tis 20|tsut tis 20]] anda taẓɣelt n umadal terna s wazal n 0.74 ± 0.18 °C (1.33 ± 0.32 °F) deg tsut yezrin 
+
+
+== Isemduyen yetturajun ==
+
+
 
 [[Taggayt:Uguren n imal]]
 [[Taggayt:Tisekrarin tigamanin]]
