*Empty MediaWiki Message*

--- a/Agemmay_amaziɣ_alatin.mw
+++ b/Agemmay_amaziɣ_alatin.mw
@@ -3,7 +3,7 @@
 
 Agemmay-agi d agmud n uzdal n agemmay Alatin i tirawt n tileqmant timaziɣint am [[Taqbaylit]] d [[Tarifit]], seg iseggwasen 1840. I ɛedda s aṭas isseɣwelen, uqbel ad yaweḍ ar lqem amiran.
 
-Iqbayliyen semman-as '''Tamɛemmerit''', tajmilt i [[Mulud Mɛemmri]], amesnilsi i t-yersan ''deg udɣaɣ'' aseggas n 1973.
+Iqbayliyen semman-as '''Tamɛemmrit''', tajmilt i [[Mulud Mɛemmri]], amesnilsi i t-yersan ''deg udɣaɣ'' aseggas n 1973.
 
 Agemmay Amaziɣ Alatin isseqdec abaɛda i tirawt n amzun akk tileqmant n tutlayt [[Tamaziɣt]]. Yezmer daɣen ad yeseqdic i tutlayin n Merruk (tid i seqdacen [[Tifinaɣ]]).
 
