*Empty MediaWiki Message*

--- a/Saɣru_Band.mw
+++ b/Saɣru_Band.mw
@@ -1,8 +1,9 @@
-'''Iman n Saɣru''' neɣ Saɣru Band d yiwet deg tirubba na isawaln ɣef tusna tamaziɣt n wanzul-wegmuḍ n Umerruk. Iman n Saɣru sekrent atmaten Mbarek d Xalid Ulɛrbi tsmun inaẓuren Mbarek Ulɛrbi, Xalid Ulɛrbi, Ɛmar, Fuad, Ɛli .
+{{Databox}}
+'''Iman n Saɣru''' neɣ Saɣru Band d yiwet deg tirbaɛin n isawalen ɣef tusna tamaziɣt n wanzul-wegmuḍ n Umerruk. Iman n Saɣru xelqen-tt atmaten Mbarek d Xalid Ulɛrbi tsmun inaẓuren Mbarek Ulɛrbi, Xalid Ulɛrbi, Ɛmar, Fuad d Ɛli.
 
 ==Inaẓuren n Iman n Saɣru==
 
-*[[Mbarek Uleɛrbi]] neɣ Nba. Nba immut ass n 9 yennayer 2011 g tmurt-ines [[Mellɛb]], sbab n tameṭṭant-ines tgat yat tmudint icqqan ur tgi ur tli isafaren.
+*[[Mbarek Uleɛrbi]] neɣ Nba. Nba yemmut ass n 9 yennayer 2011 deg tmurt-ines [[Mellɛb]], sbab n tameṭṭant-ines tgat yat tmudint iceqqan ur tgi ur tli isafaren.
 
 *[[Xalid Uleɛrbi]]
 *Ɛmar Sggawi
