*Empty MediaWiki Message*

--- a/Saɣru_Band.mw
+++ b/Saɣru_Band.mw
@@ -1,7 +1,7 @@
 {{Databox}}
-'''Iman n Saɣru''' neɣ Saɣru Band d yiwet deg tirbaɛin n isawalen ɣef tusna tamaziɣt n wanzul-wegmuḍ n Umerruk. Iman n Saɣru xelqen-tt atmaten Mbarek d Xalid Ulɛrbi tsmun inaẓuren Mbarek Ulɛrbi, Xalid Ulɛrbi, Ɛmar, Fuad d Ɛli.
+'''Saɣru Band''' d tarbaɛt seg wanẓul-wegmuḍ n [[Umerruk]]. Saɣru Band xelqen-tt atmaten Mbarek d Xalid Ulɛrbi tsmun inaẓuren Mbarek Ulɛrbi, Xalid Ulɛrbi, Ɛmar, Fuad d Ɛli.
 
-==Inaẓuren n Iman n Saɣru==
+==Inaẓuren n Saɣru Band==
 
 *[[Mbarek Uleɛrbi]] neɣ Nba. Nba yemmut ass n 9 yennayer 2011 deg tmurt-ines [[Mellɛb]], sbab n tameṭṭant-ines tgat yat tmudint iceqqan ur tgi ur tli isafaren.
 
