*Empty MediaWiki Message*

--- a/Abuferriw.mw
+++ b/Abuferriw.mw
@@ -27,5 +27,6 @@ S unect n usismel n umnir (alqem 5.2, 2015) n [[aswir amesnaylal agreɣlan|uswir
 
 [[Category:Iylalen]]
 [[Category:igṭaṭ]] 
+[[Category: Iylalen iminigen]]
 [[Category:ibuferriwen]]
 [[Category:iɣersiwen]]
