*Empty MediaWiki Message*

--- a/Aberzegzaw.mw
+++ b/Aberzegzaw.mw
@@ -12,3 +12,9 @@ Deg tallit n usefrurex izeddeɣ deg Yiraten n [[tagant|tẓegwa]] d urtiyen anda
 
 == Učči ==
 Aberzegzaw itett [[ifes|ifsan]] d [[Aburɣas|iburɣas]]
+
+[[Category:Iylalen]]
+[[Category:igṭaṭ]] 
+[[Category: Iylalen iminigen]]
+[[Category:Timsennenin]]
+[[Category:iɣersiwen]]
