*Empty MediaWiki Message*

--- a/Timsennent.mw
+++ b/Timsennent.mw
@@ -43,6 +43,7 @@ Ass-a, ccetla tettwaḥrez, tanduyt tettwagdel. Maca, iseggaden ttkemmilen ahdum
 Adlis n tmaziɣt n useggas wis 3 n ulmud alemmas n tmurt n Lezzayer (sb 66-67)
 
 [[Category:iɣersiwen]]
+[[Category:Timsennenin]]
 [[Category:Tibenferriwin]]
 [[Category:Iylalen]]
 [[Category:igṭaṭ]]
