*Empty MediaWiki Message*

--- a/Asaflaw.mw
+++ b/Asaflaw.mw
@@ -10,6 +10,8 @@ Sylvia atricappila vogelartinfo chris romeiks R7F4015.jpg|Tawtemt n usaflaw
 Jeune fauvette à tête noire 05.jpg|Aknuz (Afrux)
 </gallery>
 
+== Učči ==
+
 == Ẓeṛ daɣen ==
 * [[Aberzegzaw]]
 * [[Abuferriw]]
