--- a/Asaflaw.mw
+++ b/Asaflaw.mw
@@ -11,6 +11,7 @@ Jeune fauvette à tête noire 05.jpg|Aknuz (Afrux)
 </gallery>
 
 == Učči ==
+Deg tsemhuyt n umyaraw, Asaflaw itett [[aburɣas|iburɣas]] ma deg [[anebdu|unebdu]] (seg Yulyu) iy tett igumma yakk d [[ifes|ifsan]] i wakken ad tallen (ad tɛawnen) deg inig-is deg taggara n [[amwan|umwan]]
 
 == Ẓeṛ daɣen ==
 * [[Aberzegzaw]]
