*Empty MediaWiki Message*

--- a/Asaflaw.mw
+++ b/Asaflaw.mw
@@ -13,6 +13,11 @@ Jeune fauvette à tête noire 05.jpg|Aknuz (Afrux)
 == Učči ==
 Deg tsemhuyt n umyaraw, Asaflaw itett [[aburɣas|iburɣas]] ma deg [[anebdu|unebdu]] (seg Yulyu) iy tett igumma yakk d [[ifes|ifsan]] i wakken ad tallen (ad tɛawnen) deg inig-is deg taggara n [[amwan|umwan]]
 
+== [[Tagemra]] ==
+
+== Asru ==
+Talmest-a tettwaglem sɣur umusnaw n [[Swid]] ''[[Carl Von Linné]]'' deg useggas n [[1758]] s ddaw n yisem-is imtelleɣ (''Motacilla atricapilla'')
+
 == Ẓeṛ daɣen ==
 * [[Aberzegzaw]]
 * [[Abuferriw]]
