*Empty MediaWiki Message*

--- a/Asaflaw.mw
+++ b/Asaflaw.mw
@@ -14,6 +14,7 @@ Jeune fauvette à tête noire 05.jpg|Aknuz (Afrux)
 Deg tsemhuyt n umyaraw, Asaflaw itett [[aburɣas|iburɣas]] ma deg [[anebdu|unebdu]] (seg Yulyu) iy tett igumma yakk d [[ifes|ifsan]] i wakken ad tallen (ad tɛawnen) deg inig-is deg taggara n [[amwan|umwan]]
 
 == [[Tagemra]] ==
+Asaflaw d iswi n [[Agmar|ugmar]] i [[tamedda|tmedda]] deg yideggan n usefrurex. Mači anagar tamedda igemmren asaflaw deg tsekliwin maca ula d [[Afelkay|afelkay]] yakk d kra n temsuṭaṭ am [[Tareddi|treddi]] d [[tadɣaɣat|tedɣaɣat]] d [[anẓid|unẓid]]. Ad yeqqim umcic n wexxam d tasekrart-is (axeṣṣar-is) tameqrant anda iy tett ula d ifruxn-is deg [[Agdef|uwdef]] ayen yeǧǧan imusnawen ad ddmen anect-a d anezgun acku yezmer ad t-y-awi ar umihi n [[angar|wengar]]
 
 == Asru ==
 Talmest-a tettwaglem sɣur umusnaw n [[Swid]] ''[[Carl Von Linné]]'' deg useggas n [[1758]] s ddaw n yisem-is imtelleɣ (''Motacilla atricapilla'')
