*Empty MediaWiki Message*

--- a/Asaflaw_(tawsit).mw
+++ b/Asaflaw_(tawsit).mw
@@ -4,6 +4,7 @@
 == Umuɣ n telmas ==
 
 * [[Asaflaw]] — (''Sylvia atricapilla'')
+* [[Asaflaw n urtan]] — (''Sylvia borin'') 
 * [[Tajja]] — (''Sylvia hortensis)
 
 == Ẓeṛ daɣen ==
