--- a/Asaflaw_n_urtan.mw
+++ b/Asaflaw_n_urtan.mw
@@ -16,5 +16,5 @@
 [[Taggayt:igṭaṭ]]
 [[Taggayt:Igṭaṭ n Uruppa]]
 [[Taggayt:Iɣersiwen]]
-[[Taggayt:Tiberdeffilin]]
+[[Taggayt:Tiberdefflin]]
 [[Taggayt:Iylalen iminigen]]
