*Empty MediaWiki Message*

--- a/Asaflaw_n_urtan.mw
+++ b/Asaflaw_n_urtan.mw
@@ -3,7 +3,10 @@
 
 
 == Aglam ==
+'''Tamuɣlit tuffiɣt''' <br/>
+[[Tugna:Sylvia borin (Örebro County).jpg|thumb|250px|Amawaṭ n [[adu-telmest|wadu-telmest]] amassaɣ deg [[Örebro län]] - [[Swid]]]]
 
+Asaflaw n urtan ila tamuɣlit yuddsen s wassaɣ, Akat-is yettawaṭ ar 14 cm deg teɣzi, d udinan n wafriw ilan seg 7,6 cm ar 8,4 cm, [[azuk|Azuk-is]] yettili gar n 16 ar 22 g. Maca yezmer ad yaweṭ ar 35,5 ɣer Iylalen yesuddusen (yettheggin) ad [[tinigt n Iylalen|inigen]], Asaflaw n urtan ila adfar d wafriwen ɣezzifen
 
 == Amyaraw d ideggan n tudert ==
 
