--- a/Asaflaw_n_urtan.mw
+++ b/Asaflaw_n_urtan.mw
@@ -8,6 +8,12 @@
 
 Asaflaw n urtan ila tamuɣlit yuddsen s wassaɣ, Akat-is yettawaṭ ar 14 cm deg teɣzi, d udinan n wafriw ilan seg 7,6 cm ar 8,4 cm, [[azuk|Azuk-is]] yettili gar n 16 ar 22 g. Maca yezmer ad yaweṭ ar 35,5 ɣer Iylalen yesuddusen (yettheggin) ad [[tinigt n Iylalen|inigen]], Asaflaw n urtan ila adfar d wafriwen ɣezzifen
 
+'''Asemyif gar n snat n [[Adu-telmest|tdu-lemsin]] n usaflaw n urtan''' <br/>
+
+
+'''Asčewčew'''
+[[File:Garden Warbler (Sylvia borin) (W1CDR0001463 BD12).ogg|thumb|right|[[Awtem]] yesčewčiw]]
+
 == Amyaraw d ideggan n tudert ==
 
 
