--- a/Asaflaw_n_urtan.mw
+++ b/Asaflaw_n_urtan.mw
@@ -10,9 +10,15 @@ Asaflaw n urtan ila tamuɣlit yuddsen s wassaɣ, Akat-is yettawaṭ ar 14 cm deg
 
 '''Asemyif gar n snat n [[Adu-telmest|tdu-lemsin]] n usaflaw n urtan''' <br/>
 
+[[Tugna:Naturalis Biodiversity Center - RMNH.AVES.138188 1 - Sylvia borin borin (Boddaert, 1783) - Sylviidae - bird skin specimen.jpeg|thumb|250px|''S. b. borin''- imuren ifellayen n uwtem. Tikkest n [[Asalay aɣelnaw n umezruy agaman|RMNH]].AVES.138188, tettwagru deg [[Leiden]] ([[Timura n Wadda|Timura yudren]])]]
+
+
+[[Tugna:Naturalis Biodiversity Center - RMNH.AVES.138188 2 - Sylvia borin borin (Boddaert, 1783) - Sylviidae - bird skin specimen.jpeg|thumb|250px|S. b. borin- imuren n wadda n tikkest yezrin (RMNH.AVES.138188).]]
+
+
 
 '''Asčewčew'''
-[[File:Garden Warbler (Sylvia borin) (W1CDR0001463 BD12).ogg|thumb|right|[[Awtem]] yesčewčiw]]
+[[File:Garden Warbler (Sylvia borin) (W1CDR0001463 BD12).ogg|thumb|right|[[Awtem]] yesčewčiw]]]]
 
 == Amyaraw d ideggan n tudert ==
 
