*Empty MediaWiki Message*

--- a/Asaflaw_n_urtan.mw
+++ b/Asaflaw_n_urtan.mw
@@ -18,7 +18,9 @@ Asaflaw n urtan ila tamuɣlit yuddsen s wassaɣ, Akat-is yettawaṭ ar 14 cm deg
 
 
 '''Asčewčew'''
-[[File:Garden Warbler (Sylvia borin) (W1CDR0001463 BD12).ogg|thumb|right|[[Awtem]] yesčewčiw]]]]
+[[File:Garden Warbler (Sylvia borin) (W1CDR0001463 BD12).ogg|thumb|right|[[Awtem]] yesčewčiw]]
+
+'''Tilmas yettemcabin'''
 
 == Amyaraw d ideggan n tudert ==
 
