--- a/Agraw_i_Yidles_d_Tugdut.mw
+++ b/Agraw_i_Yidles_d_Tugdut.mw
@@ -10,6 +10,6 @@ Agraw i Yidles d Tugdut, am [[Tirni Iɣallen Inemlayen]], wer yekcim ara deg tef
 
 === Tamselyut ===
  
-* [http://www.rcd-algerie.org/index.php?id_rubrique=23 http://www.rcd-algerie.org] Tuqqna n ukabar
+* [http://www.rcd-algerie.org/index.php?id_rubrique=23 http://www.rcd-algerie.org] Asmel web unsib n ukabar
 
 [[Taggayt:Ikabaren isertanen]]
