*Empty MediaWiki Message*

--- a/Agraw_i_Yidles_d_Tugdut.mw
+++ b/Agraw_i_Yidles_d_Tugdut.mw
@@ -1,13 +1,10 @@
 [[Tugna:Flag of the Rassemblement pour la Culture et la Démocratie.svg|thumb|right|200px]] 
 
-'''Agraw i Yidles d Tugdut (GDG)''' (Tafransist: ''Rassemblement pour la Culture et la Démocratie (RCD)'') d akabar asertan iy yellan di [[Dzayer]]. Akabar a yedwes di Leqbayel. Yesbedd-it Dr Saɛid Saɛdi deg 1989 di Tizi Wezzu. 
+'''Agraw i Yidles d Tugdut (GDG)''' (Tafransist: ''Rassemblement pour la Culture et la Démocratie (RCD)'') d akabar asertan i yellan deg [[Lezzayer]]. Akabar-a yedwes deg [[Tamurt n Leqbayel|tmurt n Leqbayel]] . Yesbedd-it mass Saɛid Saɛdi deg 1989 deg [[Tizi Wezzu]]. 
 
-Amezruy n ukabar agi daɣen yeqqen s amezruy n umalway ines [[Saɛid Saɛdi]].
+Amezruy n ukabar-agi daɣen yeqqen s amezruy n umalway-ines [[Saɛid Saɛdi]].
 
-Agraw i Yidles d Tugdut, am [[Tirni Iɣallen Inemlayen]], wer yekcim ara deg tefrant n tselwit deg 2002.
-
-[[Tugna:GYU_g_Dzayer_tamanaɣt.jpg|thumb|200px|right|Axxam n G.Y.U g [[Dzayer Tamanaɣt]], abrid [[Diduc Murad]], [[Michelet]] zik]]
-
+Agraw i Yidles d Tugdut, am [[Tirni Iɣallen Inemlayen]], ur yekcim ara deg tefrant n tselwit deg 2002.
 === Tamselyut ===
  
 * [http://www.rcd-algerie.org/index.php?id_rubrique=23 http://www.rcd-algerie.org] Asmel web unsib n ukabar
