*Empty MediaWiki Message*

--- a/Aẓiẓ.mw
+++ b/Aẓiẓ.mw
@@ -1,4 +1,5 @@
 {{Automatic taxobox}}
+[[File:Torgos tracheliotus MHNT.ZOO.2010.11.78.7.jpg|thumb| ''Torgos tracheliotus'']]
 '''Aẓiẓ''' ([[Assaɣ usnan]]: '' Torgos tracheliotos'') d [[tawsit (tudersent)|tawsit]] n [[tigermamzikin]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[iberniyen]] deg [[tafesna (tasnudert)|tfesna]] n [[tisekliwin|tsekliwin]] dgi llan-t [[talmest|telmas]] n iden am [[ijider]], [[Tasiwant]], [[tamedda]] d [[Aberni|uberni]]
 
 == Idgan n tudert ==
