--- a/Isɣi.mw
+++ b/Isɣi.mw
@@ -1,4 +1,5 @@
 {{Databox}}
+[[File:Neophron percnopterus MHNT.ZOO.2010.11.79.1.jpg|thumb| ''Neophron percnopterus'']]
 '''Isɣi''' ([[Assaɣ usnan]]: ''Neophron percnopterus'') d [[ijider]] meẓẓiyen yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[iberniyen]], yettidir deg [[Tafriqt n Ugafa|Tefrikt n ugafa]] d [[Turuft|Uruppa]] d [[Anẓul n Asya|wneẓul n Asya]] 
 
 == Aglam ==
