*Empty MediaWiki Message*

--- a/Tiyuzaṭ.mw
+++ b/Tiyuzaṭ.mw
@@ -1,4 +1,4 @@
 {{Automatic taxobox}}
-'''Tiyuzaṭ''' ([[Assaɣ usnan]]: ''Galliformes'') d [[tafesna]] n [[aylal|iylalen]] ẓẓayen deg [[tafekka|tfekka]], Tafesna dges [[abibi]], [[Ayaziṭ n ideflawen]], [[Yuzaṭ]], [[Tajirra]], [[Tasekkurt n ideflawen]], [[Tasekkurt]] d [[Iferd|yiferd]]
+'''Tiyuzaṭ''' ('''[[Assaɣ usnan]]''': ''Galliformes'') d [[tafesna (tasnudert)|tafesna]] n [[aylal|iylalen]] ẓẓayen deg [[tafekka|tfekka]], Tafesna ayi dges [[abibi]], [[Ayaziṭ n ideflawen]], [[Yuzaṭ]], [[Tajirra]], [[Tasekkurt n ideflawen]], [[Tasekkurt]] d [[Iferd|yiferd]]
 
 == Tiwaculin ==
