--- a/Tasekkurt.mw
+++ b/Tasekkurt.mw
@@ -1,6 +1,8 @@
 {{Automatic taxobox}}
 '''Tasekkurt''' ('''[[Assaɣ ussnan]]''': '' Perdix'') d [[assaɣ imezdi]] id yemmalen kra n telmas n [[aylal|iylalen]] iy lan (yesɛan) tiseknin timarwaswasin yakk yemmudsen (yettemcabin yakk yemmiqraben) igan d tagemrawt, Tisekrin d [[tiyuzaṭ]] s tiddi meẓẓiyen. Tizrawin tussnanin ssknen-t-d d akken irem n ''Tsekkurt'' ur yesmutur ara yakk [[talmest|tilmas]] id yekkan seg yiwen n umraw. S yirem n iden tagrawt n tsekrin tga d [[azunazɣer]] (paraphyly) ayen yennumken (ayen yebɣan ad yini) d akken tasekkurt mači d [[tamsartut]]. Dɣa [[tasartut n tesnudert|tisurta n tesnudert]] am win n [[Aswir amsaylal agraɣlan|IOC]] yessismil amur ameqran n iylalen-a deg tɣult [[adu-twacult|wadu-twacult]] n [[tisekkurin|tsekkurin]]
 
+== Taskant ==
+Tasekkurt d aylal yeẓlin (icebḥen) s waṭas deg [[Afraw|wafraw-is]] d uferfer-is, llant waṭas n [[talmest|telmas]] n tsekrin deg umadal. Talmest igan d timezdit deg [[Tamurt n Leqbayel|tmurt n Iqbayliyen]] d [[tasekkurt tamaziɣt]], ma deg [[Turuft|Uruppa]] llant s tuget 
 
 [[Category:iɣersiwen]]
 [[Taggayt:Iylalen]]
