*Empty MediaWiki Message*

--- a/Tasekkurt.mw
+++ b/Tasekkurt.mw
@@ -7,6 +7,8 @@ Tasekkurt d aylal yeẓlin (icebḥen) s waṭas deg [[Afraw|wafraw-is]] d uferf
 TTiddi n tsekkrin yeṭṭafaren adu-twacult n [[tisekrawin|tsekrawin]] d win igan gar n [[Takura|tjira]] meqqren d [[ifred|yifred]] meẓẓiyen, Učči n tsekrin yezzi ɣef [[ifes|yifsan]] id tt-affen-t deg tegnit 
 
 == Tazrawt n zik ==
+* Tettwaff-d tikkest n [[Theophrastus]] ɣer [[Aulus Gellius]] deg tẓuri-ynes [[uṭan Attiken]] 
+
 
 [[Category:iɣersiwen]]
 [[Taggayt:Iylalen]]
