*Empty MediaWiki Message*

--- a/Tasekkurt.mw
+++ b/Tasekkurt.mw
@@ -7,8 +7,20 @@ Tasekkurt d aylal yeẓlin (icebḥen) s waṭas deg [[Afraw|wafraw-is]] d uferf
 TTiddi n tsekkrin yeṭṭafaren adu-twacult n [[tisekrawin|tsekrawin]] d win igan gar n [[Takura|tjira]] meqqren d [[ifred|yifred]] meẓẓiyen, Učči n tsekrin yezzi ɣef [[ifes|yifsan]] id tt-affen-t deg tegnit 
 
 == Tazrawt n zik ==
-* Tettwaff-d tikkest n [[Theophrastus]] ɣer [[Aulus Gellius]] deg tẓuri-ynes [[uṭan Attiken]] 
 
+== Umuɣ n telmas yettusemman Tasekkurt ==
+
+* [[Asekkur aṛumi]] — ''[[Asekkur aṛumi|Alectoris graeca]]''
+* [[Asekkur acukaṛ]] — ''[[Asekkur acukaṛ|Alectoris chukar]]''
+* [[Tasekkurt tamaziɣt]] — ''[[Tassekkurt tamaziɣt|Alectoris barbara]]''
+* [[Tasekkurt tazunɣidt]] — ''[[Tasekkurt tazunɣidt|Perdix perdix]]''
+* [[Tasekkurt tinijdit]] — ''[[Tasekkurt tinijdit|Ammoperdix heyi]]''
+* [[Tasekkurt n Tibet]] — ''[[Tasekkurt n Tibet|Perdix hodgsoniae]]''
+* [[Tasekkurt tazeggaɣt]] — ''[[Tasekkurt tazeggaɣt|Alectoris rufa]]''
+
+== Tasekkurt deg yidles alsan ==
+
+== Ẓeṛ daɣen ==
 
 [[Category:iɣersiwen]]
 [[Taggayt:Iylalen]]
