*Empty MediaWiki Message*

--- a/Azawax.mw
+++ b/Azawax.mw
@@ -30,7 +30,7 @@
 | data14 =307
 }}
 
-'''Azawax''' d aqejjun yettidiren di tama n tefriqt ugafa, yekka-d yisem Azawax seg awal Azewwax (Tamaziɣt): win yettzuxun acku ṣṣenf-agi n iqejjan d win iḥemmlen ad isken iman-is. yettidir deg unẓul n tefriqt ugafa, ɣur itargiyen di tama n Mali, Nijer, Burkina faṣu ..., ssawalen-as deɣen Sellugi Atargi.
+'''Azawaɣ''' neɣ '''Azawax''' neɣ '''Uska''' d [[aydi]] yettidiren di tama n [[Tafriqt n Ugafa|Tefriqt ugafa]], yekka-d yisem-is seg wawal amaziɣ ''Azewwaɣ'' (ayen yennumken: win yettzuxun acku talmest-a n yiṭan d win irán (iḥemmlen) ad isken iman-is). yettidir deg [[Aneẓruf Ameqran|uneẓruf ameqran]] n tefriqt ugafa, ɣur [[itargiyen]] deg tmura n [[Mali]], [[Nnijer]], [[Burkina fasu]] yakk d unẓul n [[Lezzayer]]
 
 ==Amezruy==
 Yella di temnaṭ n Saḥel "anẓul tefriqt ugafa" si zik, iban-d di Tuṛuft deg iseggasen n 1970. Aseggas 1981, amqun agraɣlan n teɣri n iqejjan (FCI) tga azal i y Iri Azawax.
