*Empty MediaWiki Message*

--- a/Pornichet.mw
+++ b/Pornichet.mw
@@ -12,6 +12,6 @@ Plage de Sainte-Marguerite.jpg|''Plage de Sainte-Marguerite''.
 Course hippodrome.JPG|''Hippodrome de Pornichet''. 
 </gallery> 
 
-{{commons|Bourg-la-Reine}} 
+{{commons|Pornichet}} 
 
 [[Taggayt:Timdinin n Fransa]]
