--- a/Ameksa_wulli.mw
+++ b/Ameksa_wulli.mw
@@ -6,6 +6,12 @@ Ariɣ n [[awtem|uwtem]] d awraɣ aweṛɣan. Yakk d [[afriw|wafriw]] n [[asallaf
 
 [Afraw]] n [[tawtemt|tewtemt]] iga d amnummsan ugar, Arur-is d azegza s yini n iferran n uzemmur ma d adis-is d adnanes yebberqec. Afraw n iknuzen (ifrax) d aras yeɣman (qessiḥen)
 
+<gallery mode=packed>
+Oriolus oriolus Ayodar 1.jpg|''Oriolus oriolus'' - Awtem
+Oriolus oriolus Ayodar 2.jpg|''Oriolus oriolus'' - Tawtemt
+Loriot_juvenile.JPG|Afrux.
+</gallery>
+
 == Ẓeṛ daɣen ==
 
 
