*Empty MediaWiki Message*

--- a/Ameksa_wulli.mw
+++ b/Ameksa_wulli.mw
@@ -12,6 +12,14 @@ Oriolus oriolus Ayodar 2.jpg|''Oriolus oriolus'' - Tawtemt
 Loriot_juvenile.JPG|Afrux.
 </gallery>
 
+== Tikeli ==
+
+== Taẓuni d yideggan n tudert ==
+
+== Amyaraw ==
+
+== Asru ==
+
 == Ẓeṛ daɣen ==
 
 
