--- a/Tasekkurt_tamaziɣt.mw
+++ b/Tasekkurt_tamaziɣt.mw
@@ -10,6 +10,13 @@ Tiddi n n [[aylal|waylal-a]] tga gar n 33 ar 36 cm, talɣa n tfekka-as tga d tam
 Tebennu [[Agdef|igedfen]] deg tegnit yekkawen. Sin akin ad yessers gar n 10 ar 16 n tmellalin
 
 == Tikeli ==
+Aylal-a yezmer ad yegg aclag (ad yexdem taqeḍɛit) yettawin gar n 7 ar 100 n tsekrin deg tsemhuyt n [[tagrest|tegrest]]. Afraw-is agtini (multicolor) iga-y-as [[asengel]] i gerrzen s waṭas 
+
+'''[[Amyaraw]]'''
+
+[[Tugna:Perdrix gambra MHNT.jpg|thumb|250px|Timellalin n tsekkurt tamaziɣt]]
+
+Tasemhuyt n umyaraw n tsekkurt d win id yettilin seg tazwara n [[Yebrir]] ar taggara n [[Yunyu]]. Tawtemt yessrusay gar n
 
 == Ideggan n tudert ==
 
