--- a/Tasekkurt_tamaziɣt.mw
+++ b/Tasekkurt_tamaziɣt.mw
@@ -16,7 +16,7 @@ Aylal-a yezmer ad yegg aclag (ad yexdem taqeḍɛit) yettawin gar n 7 ar 100 n t
 
 [[Tugna:Perdrix gambra MHNT.jpg|thumb|250px|Timellalin n tsekkurt tamaziɣt]]
 
-Tasemhuyt n umyaraw n tsekkurt d win id yettilin seg tazwara n [[Yebrir]] ar taggara n [[Yunyu]]. Tawtemt yessrusay gar n
+Tasemhuyt n umyaraw n tsekkurt d win id yettilin seg tazwara n [[Yebrir]] ar taggara n [[Yunyu]]. Tawtemt yessrusay gar n 15 ar 20 n tmellalin maca llant kra n tikwal dgi tezmer tewtemt ad yessers alamma d 25 n tmellalin sin akin ad [[azdal|tezdel]] fell-asen-t gar n 22 ar 24 n wussan mi ara ad ffɣen ikenzayen (ifeṛṛujen) yeggunin (tt-kalayen) yakk ɣef imawlan-nsen deg usečči. Seld sin n imalasen (snat n ssmanat) ttfɣen-d seg [[Agdef|wegdef]] ibwakken ad ksun yakk d imawlan-nsen
 
 == Ideggan n tudert ==
 
