*Empty MediaWiki Message*

--- a/Tasekkurt_tamaziɣt.mw
+++ b/Tasekkurt_tamaziɣt.mw
@@ -19,6 +19,7 @@ Aylal-a yezmer ad yegg aclag (ad yexdem taqeḍɛit) yettawin gar n 7 ar 100 n t
 Tasemhuyt n umyaraw n tsekkurt d win id yettilin seg tazwara n [[Yebrir]] ar taggara n [[Yunyu]]. Tawtemt yessrusay gar n 15 ar 20 n tmellalin maca llant kra n tikwal dgi tezmer tewtemt ad yessers alamma d 25 n tmellalin sin akin ad [[azdal|tezdel]] fell-asen-t gar n 22 ar 24 n wussan mi ara ad ffɣen ikenzayen (ifeṛṛujen) yeggunin (tt-kalayen) yakk ɣef imawlan-nsen deg usečči. Seld sin n imalasen (snat n ssmanat) ttfɣen-d seg [[Agdef|wegdef]] ibwakken ad ksun yakk d imawlan-nsen
 
 == Ideggan n tudert ==
+Tasekkurt tamaziɣt d talmest n [[tasekkurt|tsekrin]] yettidiren deg tmura n [[Tamazɣa|tmazɣa]] ayen is-yefkan isem-is. Seg [[Lezzayer]] (yakk d [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]]) ar [[Ameṛṛuk|Umeṛṛuk]] d [[Tunes]] d [[Muriṭanya]] ar umalu n [[Maṣer|Miẓra]] d [[tigzirin Tiknariyin]] yeṭṭafaren tamurt n [[Spanya]]
 
 == Asru ==
 
