*Empty MediaWiki Message*

--- a/Antony.mw
+++ b/Antony.mw
@@ -1,6 +1,6 @@
 {{Infobox city}} 
 
-'''Antony''' d [[tamdint]] n [[Fransa]]. D tamaneɣt n agezdu (département) n [[Haus-de-Seine]]. Zedɣen-tt {{formatnum:62210}} n yimezdaɣen. 
+'''Antony''' d [[tamdint]] n [[Fransa]]. D tamaneɣt n agezdu (département) n [[Hauts-de-Seine]]. Zedɣen-tt {{formatnum:62210}} n yimezdaɣen. 
 
 {{commons|Antony}} 
 
