Création de l'article.

--- a/Asnières-sur-Seine.mw
+++ b/Asnières-sur-Seine.mw
@@ -2,6 +2,6 @@
 
 '''Asnières-sur-Seine''' d [[tamdint]] n [[Fransa]]. D tamaneɣt n agezdu (département) n [[Hauts-de-Seine]]. Zedɣen-tt {{formatnum:85973}} n yimezdaɣen. 
 
-{{commons|Antony}} 
+{{commons|Asnières-sur-Seine}} 
 
 [[Taggayt:Timdinin n Fransa]]
