--- a/Ameksa_wulli.mw
+++ b/Ameksa_wulli.mw
@@ -13,6 +13,11 @@ Loriot_juvenile.JPG|Afrux.
 </gallery>
 
 == Tikeli ==
+'''Učči'''
+
+Učči n umeksa wulli yezzi ɣef [[aburɣas|iburɣas]] meqqren d [[tiswermin|teswermin]] am [[izinzer|izinzren]],  [[takeččawt|tkeččawin]],  [[aferṭeṭṭu|iferṭeṭṭa]],  [[arẓaẓ|warẓaẓen]], [[agayemru]], [[Tadlafriwin]] yakk d [[Aberru|iberruten]] maca daɣen deg waṭas n wakuden iy tett ula d [[tissist|tissisin]] yakk d [[Tigri|tigritin]] 
+
+Mi ara ad yas wakud n [[igumma]] am [[aredlim|uredlim]], [[tiyni]],  [[tabexsist|tibexsisin]] yakk d [[tizwal]] yiwet n tayuga n umeksa wulli tezmer ad tt-fakk yakk igumma yellan deg [[aseklu|useklu]]
 
 == Taẓuni d yideggan n tudert ==
 
