*Empty MediaWiki Message*

--- a/Ameksa_wulli.mw
+++ b/Ameksa_wulli.mw
@@ -4,7 +4,7 @@
 == Aglam ==
 Ariɣ n [[awtem|uwtem]] d awraɣ aweṛɣan. Yakk d [[afriw|wafriw]] n [[asallaf|wedfar]] d aberkan. Dɣa anaw n tmuɣlit-is temgarad yakk ɣef [[aylal|iylalen]] n iden yettidiren deg Uruppa d [[tamurt n Leqbayel|tmurt n Yiqbayliyen]]. Isem Alatin n umeksa wulli ''Oriolus'' dɣa awal-a yennumke-d ini awraɣ n weylal-a
 
-[Afraw]] n [[tawtemt|tewtemt]] iga d amnummsan ugar, Arur-is d azegza s yini n iferran n uzemmur ma d adis-is d adnanes yebberqec. Afraw n iknuzen (ifrax) d aras yeɣman (qessiḥen)
+[[Afraw]] n [[tawtemt|tewtemt]] iga d amnummsan ugar, Arur-is d azegza s yini n iferran n uzemmur ma d adis-is d adnanes yebberqec. Afraw n iknuzen (ifrax) d aras yeɣman (qessiḥen)
 
 <gallery mode=packed>
 Oriolus oriolus Ayodar 1.jpg|''Oriolus oriolus'' - Awtem
