*Empty MediaWiki Message*

--- a/Louis_Pasteur.mw
+++ b/Louis_Pasteur.mw
@@ -1,4 +1,4 @@
 {{Infobox biography}}
-'''Louis Pasteur''', d amassan afransis, ilul di Dole ([[Jura]]) ass n 27 deg dujember 1822, yemmut ass n 28 cṭember 1895, di Marnes la Coquette (tura di [[Île-de-France|Ile-de-France]]). Deg usileɣ i d-yeḍfer, yella d ameskimi u d amesfizik, d acu yettwaḥsab seg imezwura isersen llsas i tsenmikurbit (microbiologie) ; yuɣ lḥal yeḍḥa-d yettwassen nezzeh ula mi t-mazal, segmi d-yufa tagezzayt ilqen mgal tussḍa n yiḍan.
+'''Louis Pasteur''', d amassan afransis, ilul di Dole ([[Jura]]) ass n 27 deg dujember 1822, yemmut ass n 28 cṭember 1895, di [[Marnes-la-Coquette]] (tura di [[Île-de-France]]). Deg usileɣ i d-yeḍfer, yella d ameskimi u d amesfizik, d acu yettwaḥsab seg imezwura isersen llsas i tsenmikurbit (microbiologie) ; yuɣ lḥal yeḍḥa-d yettwassen nezzeh ula mi t-mazal, segmi d-yufa tagezzayt ilqen mgal tussḍa n yiḍan.
 
 [[Taggayt:Fransa]]
