*Empty MediaWiki Message*

--- a/Tizizwit.mw
+++ b/Tizizwit.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tizizwit''' ([[Asget]]: '''Tizizwa'''), ([[assaɣ usnan]]: ''Anthophila'') d [[aburɣas]] yeṭṭafaren [[tafesna]] n [[tadlafriwin|tedlafriwin]], Tawuri-ynes d afares n [[tamment]] d [[aɣrum n tzizwa|uɣrum n tzizwa]] d [[afarer|ufarer]], Ar tura ttwasnen-t wazal n 20.000 n [[talmest|telmas]] ttidiren-t deg yakk [[amenẓaw|imenẓawen]] n [[tagnit|tegnit]] anagar [[Antraktika]], Ɣas akken azgen ameqran n telmas d [[Timezdit|timettyin]] maca llan-t waṭas n telmas n iden d timsufin (ttidiren-t iman-nsent).
+'''Tizizwit''' ([[Asget]]: '''Tizizwa'''), ([[assaɣ usnan]]: ''Anthophila'') d [[aburɣas]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[tadlafriwin|tedlafriwin]], Tawuri-ynes d afares n [[tamment]] d [[aɣrum n tzizwa|uɣrum n tzizwa]] d [[afarer|ufarer]], Ar tura ttwasnen-t wazal n 20.000 n [[talmest|telmas]] ttidiren-t deg yakk [[amenẓaw|imenẓawen]] n [[tagnit|tegnit]] anagar [[Antraktika]], Ɣas akken azgen ameqran n telmas d [[Timezdit|timettyin]] maca llan-t waṭas n telmas n iden d timsufin (ttidiren-t iman-nsent).
 [[Tizizwa n tamment]] yakk i d [[tawsit (tudersent)|tawsit]] yettwassenen acku d talmest id yettaken [[tamment]] i [[afgan|wefgan]]
 
 == Tamhazt ==
