*Empty MediaWiki Message*

--- a/Agayemru.mw
+++ b/Agayemru.mw
@@ -1,6 +1,5 @@
 {{Automatic taxobox}}
-'''Agayemru''' ('''[[Asget]]''': '''igayemruten''') d yal agman seg 250 n [[talmest|telmas]] yettekkin deg [[tawsit (tudersent)|tewsit]] n '''''Bombus''''' igan d amur deg [[tawacult (tasnudert)|twacult]] n [[tazizwayt|tzizwayt]] (dgi llant daɣen [[tazizwit|tzizwa]]), Dɣa tawsit-a tga d tagrawt tamyiwent yellan deg [[Taɣreft (Tasartut)|teɣreft]] n [[Bombini]], Ɣas akken llant kra n tewsitin [[angar|inegren]] ttilint-as-d yettwassnen s [[ timesɣaz|tmesɣaz]] amdya tin n (''Calyptapis'') 
-
+'''Agayemru''' ('''[[Asget]]''': '''igayemruten''') d yal agman seg 250 n [[talmest|telmas]] yettekkin deg [[tawsit (tudersent)|tewsit]] n '''''Bombus''''' igan d amur deg [[tawacult (tasnudert)|twacult]] n [[tazizwayt|tzizwayt]] (dgi llant daɣen [[tizizwit|tzizwa]]), Dɣa tawsit-a tga d tagrawt tamyiwent yellan deg [[Taɣreft (Tasartut)|teɣreft]] n [[Bombini]], Ɣas akken llant kra n tewsitin [[angar|inegren]] ttilint-as-d yettwassnen s [[ timesɣaz|tmesɣaz]] amdya tin n (''Calyptapis'')
 
 == Ẓeṛ daɣen ==
 * [[Arẓaẓ]]
