--- a/Agayemru.mw
+++ b/Agayemru.mw
@@ -1,5 +1,14 @@
 {{Automatic taxobox}}
-'''Agayemru''' ('''[[Asget]]''': '''igayemruten''') d yal agman seg 250 n [[talmest|telmas]] yettekkin deg [[tawsit (tudersent)|tewsit]] n '''''Bombus''''' igan d amur deg [[tawacult (tasnudert)|twacult]] n [[tazizwayt|tzizwayt]] (dgi llant daɣen [[tizizwit|tzizwa]]), Dɣa tawsit-a tga d tagrawt tamyiwent yellan deg [[Taɣreft (Tasartut)|teɣreft]] n [[Bombini]], Ɣas akken llant kra n tewsitin [[angar|inegren]] ttilint-as-d yettwassnen s [[ timesɣaz|tmesɣaz]] amdya tin n ('''''Calyptapis''''')
+'''Agayemru''' ('''[[Asget]]''': '''igayemruten''') d yal agman seg 250 n [[talmest|telmas]] yettekkin deg [[tawsit (tudersent)|tewsit]] n '''''Bombus''''' igan d amur deg [[tawacult (tasnudert)|twacult]] n [[tazizwayt|tzizwayt]] (dgi llant daɣen [[tizizwit|tzizwa]]), Dɣa tawsit-a tga d tagrawt tamyiwent yellan deg [[Taɣreft (Tasartut)|teɣreft]] n [[Bombini]], Ɣas akken llant kra n tewsitin [[angar|inegren]] ttilint-as-d yettwassnen s [[ timesɣaz|tmesɣaz]] amdya tin n ('''''Calyptapis''''') id ufan imusnawen deg waṭas n ideggan n wezgan agafan n umadal sin akin ufan-d timesɣaz n iden deg [[Tamrikt n Unẓul|Marikan n unẓul]] d kra n tamiwin n iden am [[Tasmanya]] d New Zelanda
+
+
+== Tasartut ==
+
+== Aglam ==
+
+== Taẓuni d ideggan n tudert ==
+
+== Assaɣ d ufgan ==
 
 == Ẓeṛ daɣen ==
 * [[Arẓaẓ]]
