*Empty MediaWiki Message*

--- a/Ameksa_wulli.mw
+++ b/Ameksa_wulli.mw
@@ -20,6 +20,9 @@ Učči n umeksa wulli yezzi ɣef [[aburɣas|iburɣas]] meqqren d [[tiswermin|tes
 Mi ara ad yas wakud n [[igumma]] am [[aredlim|uredlim]], [[tiyni]],  [[tabexsist|tibexsisin]] yakk d [[tizwal]] yiwet n tayuga n umeksa wulli tezmer ad tt-fakk yakk igumma yellan deg [[aseklu|useklu]]
 
 == Taẓuni d yideggan n tudert ==
+Ameksa wulli neɣ Tuwriɣt d talmest tamyiwent n twacult-is yettidiren deg [[Turuft|Uruppa]] d Tmurt n Iqbayliyen. Anda i temmẓer deg yakk tmura n Uruppa anagar [[Skundinavya]] d [[Timura n Ubaltik|tmura n Ubeltik]], Deg tegzirin n Britanya iga d imidrus maca yettidir deg tignatin yudren d timnummsanin n waddud 
+
+'''Tinigt'''
 
 == Amyaraw ==
 
