*Empty MediaWiki Message*

--- a/Ameksa_wulli.mw
+++ b/Ameksa_wulli.mw
@@ -25,6 +25,10 @@ Ameksa wulli neɣ Tuwriɣt d talmest tamyiwent n twacult-is yettidiren deg [[Tur
 '''Tinigt'''
 
 == Amyaraw ==
+<gallery mode=packed>
+Eurasian Golden Oriole (Oriolus oriolus) nest W IMG 9566.jpg|[[Agdef]] n umeksa wulli
+Oriolus oriolus MHNT 232 Foret de la Mamora Maroc RdN.jpg |thumb|Timellalin n umeksa wulli deg [[Asalay n Toulouse|usalay n Toulouse]]
+</gallery>
 
 == Asru ==
 
