*Empty MediaWiki Message*

--- a/Ameksa_wulli.mw
+++ b/Ameksa_wulli.mw
@@ -30,6 +30,8 @@ Eurasian Golden Oriole (Oriolus oriolus) nest W IMG 9566.jpg|[[Agdef]] n umeksa 
 Oriolus oriolus MHNT 232 Foret de la Mamora Maroc RdN.jpg |thumb|Timellalin n umeksa wulli deg [[Asalay n Toulouse|usalay n Toulouse]]
 </gallery>
 
+Ameksa wulli d aylal iminig. Yettuɣal-d seg tmezduɣt-is n unebdu deg Tefriqt gar n tlemmast n Yebrir d taggara n Mayu s unect n [[Tehri|Izerrigen n tehri]]
+
 == Asru ==
 
 == Ẓeṛ daɣen ==
